--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .login-logo {
