--- a/style/board/board_responsive.css
+++ b/style/board/board_responsive.css
@@ -18,6 +18,7 @@
     .single_task_content {
         min-width: 200px;
         max-width: 220px;
+        min-height: 208px;
     }
 
     .column_content .drop_acceptance {
