--- a/style/board/board_responsive.css
+++ b/style/board/board_responsive.css
@@ -4,6 +4,10 @@
         height: auto;
     }
 
+    .assigned_users_section_and_priority {
+        margin-top: auto;
+    }
+
     .board_table .column_content {
         display: flex;
         flex-direction: row;
@@ -23,7 +27,7 @@
 
     .column_content .drop_acceptance {
         width: 250px;
-}
+    }
 }
 
 @media (max-width: 1100px) {
@@ -71,7 +75,7 @@
     }
 }
 
-@media (max-width: 767px) {  
+@media (max-width: 767px) {
     .board_table {
         flex-direction: column;
         height: auto;
